# SDL2Chess

./: CMakeLists.txt
include/: SDL2Chess.h  engine.h  events.h  update.h
include/assets/: chess_target.h
include/engine/: engine.h  keyboard.h  mouse.h  render.h
include/game/: chess.h  fen.h  knight.h  pawn.h  piece.h  rook.h
src/: engine.c  events.c  keyboard.c  main.c  render.c
src/engine/: engine.c  events.c  keyboard.c  mouse.c  render.c  update.c
src/game/: chess.c  fen.c  knight.c  pawn.c  piece.c  rook.c
